# kz-scoring-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/kz_scoring_api/: __init__.py  __main__.py  app.py  config.py  hashing.py  lookup.py  models.py  payload.py  pipeline_client.py  secrets.py  tsv.py
tests/: conftest.py  test_api_token.py  test_config.py  test_context_key.py  test_endpoints.py  test_hashing.py  test_lookup.py  test_payload.py  test_pipeline_client.py  test_salt_decoding.py  test_tsv.py
